<resources>
    <string name="app_name">Grocery Store</string>
    <string name="shop_title">Магазин продуктов</string>
    <string name="create_shop">Создать магазин</string>
    <string name="product_name">Название продукта</string>
    <string name="cost">Цена</string>
    <string name="add_product">Добавить</string>
    <string name="exit">Exit</string>
    <string name="description">Краткое описание</string>
    <string name="save">Сохранить</string>
    <string name="back">Back</string>
</resources>